Bug 344525 - editing filenames in save-as dialog is corrupted
Summary: editing filenames in save-as dialog is corrupted
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kparts
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-24 12:14 UTC by Winfried
Modified: 2015-05-14 22:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Winfried 2015-02-24 12:14:38 UTC
In applications that depend on KF5-based version of kparts and that have a save-as dialog (ksnapshot, kate, gwenview...)
it is not possible to edit filenames as usual in the save-as dialog:
If you move the cursor to the left to edit characters of a given filename, then after inserting the first character all characters on the right side of the cursor become selected.
The consequence is that after typing a second character the selected ones are replaced by the second newly inserted character and are therefore deleted. (The extension if there was one is also deleted then.)

Difficult to explain, so here's an example:
The filename 'this-is-a-given-filename2.png' is the suggestion of ksnapshot when saving the second sceenshot  and you want to modify it to 'this-is-another-given-filename.png'.
Deleting (character '2') is never a problem. Then you move the cursor between 'a' and '-' and begin to insert. When 'n' is typed the string '-given-filename2.png' on the right side of it becomes selected and when you type 'o' then the selected string is replaced by 'o' and therefore deleted.

Trough this behaviour modifying filnames becomes very unergonomic, especially for series of files.

Expected behaviour: It should be possible to insert characters in filenames like in texts in a text editor.

Reproducable: always in different KF5-based KDE linux distributions. I tested with Manjaro 0.9.0 KDE 64-bit testing.iso, KaOS testing.iso and Kubuntu 15.04 alpha2 (Here only kate and gwenview are already KF5-based. After installing all package an kernel updates the installation became unusable.)
Comment 1 Greg Lepore 2015-05-11 10:50:07 UTC
Confirm with Kate 5.0.0 on KDE 5.9.0.
Comment 2 David Faure 2015-05-14 22:57:48 UTC
Git commit 905c6ce4c61746a862b10245a63153a124bd6f8b by David Faure.
Committed on 14/05/2015 at 22:56.
Pushed by dfaure into branch 'master'.

Ensure QComboBox doesn't create a QCompleter, we do our own completion.

This method is marked obsolete in Qt, but QComboBox::setLineEdit uses that
boolean to enable completion...
FIXED-IN: 5.11
CHANGELOG: Fix unwanted selection when editing the filename in the file dialog

M  +1    -0    src/kcombobox.cpp

http://commits.kde.org/kcompletion/905c6ce4c61746a862b10245a63153a124bd6f8b