Ensure QComboBox doesn't create a QCompleter, we do our own completion.

This method is marked obsolete in Qt, but QComboBox::setLineEdit uses that
boolean to enable completion...

BUG: 344525
FIXED-IN: 5.11
CHANGELOG: Fix unwanted selection when editing the filename in the file dialog